# pgvectorcpp1

./: CONVERSION_PLAN.md  CONVERSION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  convert_c_to_cpp.py  final_verification.py  fix_includes.py  fix_includes_direct.py  fix_local_includes.py  plan.md  test_cmake.py  test_conversion.py  test_infrastructure  test_infrastructure.cpp  test_vector  test_vector.cpp  verify_conversion.py  verify_conversion_fixed.py
src-cpp/: CMakeLists.txt  Makefile  README.md  bitutils.cpp  bitutils.hpp  bitvec.cpp  bitvec.hpp  halfutils.cpp  halfutils.hpp  halfvec.cpp  halfvec.hpp  hnsw.cpp  hnsw.hpp  hnswbuild.cpp  hnswinsert.cpp  hnswscan.cpp  hnswutils.cpp  hnswvacuum.cpp  ivfbuild.cpp  ivfflat.cpp  ivfflat.hpp  ivfinsert.cpp  ivfkmeans.cpp  ivfscan.cpp  ivfutils.cpp  ivfvacuum.cpp  sparsevec.cpp  sparsevec.hpp  vector.cpp  vector.hpp
src-cpp/core/: exceptions.hpp  vector.cpp  vector.hpp  vector_core.h
src-cpp/indexes/: vector_indexes.h
src-cpp/io/: vector_io.h
src-cpp/postgres/: pg_integration.h
src-cpp/utils/: logging.cpp  logging.hpp  memory_utils.hpp  testing.cpp  testing.hpp  vector_utils.h
